--- a/.github/workflows/landing.yml
+++ b/.github/workflows/landing.yml
@@ -1,8 +1,9 @@
 name: growvyn-landing
 
-on: workflow_dispatch
-  # push:
-  #   branches: [ main ]
+on: 
+  workflow_dispatch:
+  push:
+    branches: [ main ]
 
 permissions:
   contents: read
