--- a/.github/workflows/landing.yml
+++ b/.github/workflows/landing.yml
@@ -1,8 +1,8 @@
 name: growvyn-landing
 
 on: workflow_dispatch
-  push:
-    branches: [ main ]
+  # push:
+  #   branches: [ main ]
 
 permissions:
   contents: read
