--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "growvyn-landing",
+  "name": "millary-landing",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -15,8 +15,11 @@
     "framer-motion": "^12.4.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^6.28.0",
-    "three": "^0.170.0"
+    "swiper": "^11.2.6",
+    "three": "^0.170.0",
+    "yet-another-react-lightbox": "^3.22.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
